--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.60.0",
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^3.3.1",
     "validator": "^13.15.15",
     "zod": "^4.0.5"
