--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-icon": "^1.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
+    "recharts": "^3.1.2",
     "tailwind-merge": "^3.3.1",
     "validator": "^13.15.15",
     "zod": "^4.0.5"
