--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tabler/icons-react": "^3.34.1",
-    "@tanstack/react-query": "^5.83.0",
+    "@tanstack/react-query": "^5.85.0",
     "@types/validator": "^13.15.2",
-    "axios": "^1.10.0",
+    "axios": "^1.11.0",
     "badge": "^0.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@tanstack/eslint-plugin-query": "^5.83.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
